Fix lot of issues:
- Remove empty fields
- Design test settings part of the view page - and rework it
- Color and format scenario and view titles on view page
- Remove parenthesis from viewports edit mode and change here * to x
- Inline list's text and input fields
- Fix overlapping text at urls on view page
- Change vertical align on table elements to middle

--- a/app/sass/_overrides.sass
+++ b/app/sass/_overrides.sass
@@ -1,5 +1,5 @@
 a:not([href]):not([tabindex]),
 a:not([href]):not([tabindex]):focus,
 a:not([href]):not([tabindex]):hover
-  color: #0275d8
+  color: #666666
   text-decoration: underline
