--- a/app/sass/pages/_create.sass
+++ b/app/sass/pages/_create.sass
@@ -130,18 +130,6 @@
         text-decoration: none
         color: white
 
-  .compare-site-other-data
-    > div
-      margin-bottom: 1.5em
-
-      .input-title
-        margin-bottom: .5em
-
-    input:not([type=radio])
-      width: 545px
-      height: 40px
-      margin-bottom: 5px
-
   .action-btn
     border-top: 1px solid #8A8A8A
     margin-top: 4em
