--- a/app/sass/pages/_item-page.sass
+++ b/app/sass/pages/_item-page.sass
@@ -1,6 +1,35 @@
 
+.test-head
+  h1 > input
+    font-size: 2.5rem
+    height: 50px
+    width: 533px
+
+  .action-btn
+    a
+      padding: .75em 1.25em
+      border-radius: 5px
+      border: 1px none rgb(156, 156, 156)
+      background-color: rgb(166, 166, 166)
+      font-size: 16px
+      margin-right: 10px
+      color: white
+      text-decoration: none
+      cursor: pointer
+
+      &:hover,
+      &:active,
+      &:focus
+        text-decoration: none
+        color: white
+
+      &.save
+        border-color: rgb(53, 126, 189)
+        background-color: rgb(66, 139, 202)
+
 .test-info-header
-  background-color: #ebebeb
+  background-color: rgb(235, 235, 235)
+  background-color: rgba(235, 235, 235, 0.3)
   border-radius: 7px
   border: 0 solid rgb(200, 200, 200)
   width: 1161px
@@ -17,10 +46,12 @@
 
     div
       margin-bottom: .3em
+      font-weight: 300
       &.success
         color: $success
 
         .passed-number
+          font-weight: normal
           padding: .5em .6em
           border-radius: 8px
           border: 0 solid $success
@@ -34,6 +65,7 @@
         color: $failed
 
         .failed-number
+          font-weight: normal
           padding: .5em .6em
           border-radius: 8px
           border: 0 solid $failed
@@ -75,6 +107,28 @@
 
     .viewports-list
       font-weight: bold
+
+.scenario-info
+  .row > div
+    word-break: break-all
+
+  .scenario-name
+    font-size: 20px
+
+    &.success
+      color: #55cf63
+
+    &.failed
+      color: #cf5557
+
+    .operations
+      font-size: 14px
+      color: #292b2c
+
+.viewports
+  .viewport-name
+    color: #666666
+    font-size: 14px
 
 .test-links
   a
