--- a/app/sass/pages/_tests-page.sass
+++ b/app/sass/pages/_tests-page.sass
@@ -72,6 +72,7 @@
 
         td
           padding: .4rem
+          vertical-align: middle
           &:nth-of-type(2)
             font-weight: bold
             font-size: 14px
